k8s-manifest-files/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankapp-ingress
  namespace: webapps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    # CHANGE THIS ONLY IF YOU BOUGHT A REAL DOMAIN
    - tharindu-bank.duckdns.org
    secretName: bankapp-tls-secret
  rules:
  # CHANGE THIS ONLY IF YOU BOUGHT A REAL DOMAIN
  - host: tharindu-bank.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bankapp-service
            port:
              number: 80
